# TS-MP4-converter

./: .gitignore  CLAUDE.md  LICENSE  README.md  TSConverter.spec  app.py  build.bat  build.ps1  converter.py  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: build.yml  ci.yml
tests/: test_engine.py  test_handlers.py  test_history.py  test_junk_ts.py  test_media.py  test_models.py  test_procctl.py  test_queue.py  test_thumbnail.py  test_tray.py  test_updater.py
tsconverter/: __init__.py  history.py  models.py  queue.py  tray.py  updater.py
tsconverter/media/: __init__.py  ffmpeg.py  handlers.py  hwaccel.py  probe.py  procctl.py  thumbnail.py
