[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-mp4-converter"
version = "1.0.0"
description = "Desktop app to batch-convert .ts video files to .mp4, with GPU acceleration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["video", "ts", "mp4", "ffmpeg", "converter", "remux", "transcode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "imageio-ffmpeg>=0.5.1",
    "tkinterdnd2>=0.4.0",
    "sv-ttk>=2.6.0",
]

[project.gui-scripts]
ts-mp4-converter = "app:main"
tsconverter = "app:main"

[project.urls]
Homepage = "https://github.com/tanumay-deb/TS-MP4-converter"
Issues = "https://github.com/tanumay-deb/TS-MP4-converter/issues"

[tool.setuptools]
py-modules = ["app", "converter"]